@@ -553,6 +553,9 @@ Release 0.17.0 - Unreleased
    HADOOP-1373. checkPath() should ignore case when it compares authoriy.
    (Edward J. Yoon via rangadi)
 
+   HADOOP-3204. Fixes a problem to do with ReduceTask's LocalFSMerger not
+   catching Throwable.  (Amar Ramesh Kamat via ddas)
+
 Release 0.16.3 - Unreleased
 
   BUG FIXES
